# madres_buscadoras

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy-cloud-run.yml
app/: main.py
app/api/: _auth.py  auth.py  chat.py  demo.py  feed.py  health.py  legal.py  media.py  missing_persons.py  social.py
app/core/: config.py  db.py
app/models/: media.py  missing_person.py  social.py  user.py
app/services/: auth.py  chat.py  media.py  missing_persons.py  recaptcha.py  social.py
app/static/: layout.css  layout.js
app/static/css/: login.css  missing_person_create.css  missing_profiles.css  pizarra.css
app/static/js/: login.js  missing_person_create.js  missing_profiles.js  pizarra.js
app/templates/: _layout.html  login.html  missing_person_create.html  missing_profiles.html  pizarra.html  privacy.html  security_agreement.html  terms.html
deploy/cloudrun/: service.template.yaml
deploy/systemd/: INSTALL.md  marzlive-media-worker.service
docs/: API_QUICKTEST.md  CONTEXT_FROM_LEGACY.md  GITHUB_ACTIONS_SETUP.md  ROADMAP.md  SCHEMA_NOTES.md  postman_collection.json
scripts/: deploy_cloud_run.sh  media_worker_once.py  smoke_m3.sh
tests/: test_health.py
